== Change log ==

=== v1.23e ===
* Changed interaction with vault on adding/removing money to not use negative values, instead use the propper add or subtract methods
* Improved memory performance a bit

=== v1.23d ===
++Changed files: messages.yml++
* Fixed errors when using furnace and there are no custom-time smelting recipes
* Fixed "rmreload" not removing removed furnace recipes
* Added API method isCustomRecipe(recipe) that also checks if recipe is a furnace recipe (which isCustomRecipe(result) did NOT)
* Fixed API method removeCustomRecipes() not removing custom furnace recipes
* Fixed some java heap errors by updating the 3rd party ExperienceManager class
* Blocked the "182 recipes" message that was sent by the server which confused people about loaded recipes
* Changed "command.rmreload.done" message node to display the number of recipes loaded.

\\

=== v1.23c ===
++Changed files: config.yml++
* Fixed furnace Shift+Click behaviour:
** Items can be stacked over other items in the slots if they're alike
** You can now organize your inventory with Shift+Click again because plugin will no longer cancel it regardless of furnace's slot emptyness
** Optimized a bit so it doesn't trigger when not clicking an item
* Fixed rmreload restarting furnaces that run custom-time recipes
* Added option to enable/disable certain events for compatibility, see config.yml.
** They can also be changed while server is running by using rmreload
* Made some changes to code, should improve performance a bit

\\

=== v1.23b ===
++Changed files: config.yml++
* Fixed Shift+Clicking workbench result not updating the inventory (the temporary fix)
* Fixed RecipeManagerCraftEvent not triggering when recipe can be crafted and triggering when it couldn't
* Added "metrics" config option to change whenver this specific plugin uses metrics (doesn't create the PluginMetrics folder and stuff)

\\

=== v1.23 ===